Added custom properties, linked to Rest Controller, and updated applications.property with custon port/pathing.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=mycoolapp
+
+#
+#Change Spring Boot embedded server port
+#
+server.port=7070
+
+#
+# Set the context path of the application
+#
+# Requests should be prefixed with /mycoolapp
+#
+server.servlet.context-path=/mycoolapp
+
+
+username.name = Mr. Miller
+team.name = Wynn Elementary
